[project]
name = "fff"
version = "0.1.0"
description = "A farcaster frame that displays follower counts as a time series"
authors = [
    { name = "karmacoma", email = "karma@coma.lol" }
]
dependencies = [
    "fastapi>=0.109.2",
    "seaborn>=0.13.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
main = "fff.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "grpcio-tools>=1.60.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/fff"]
