[project]
name = "fff"
version = "0.1.0"
description = "A farcaster frame that displays follower counts as a time series"
authors = [
    { name = "karmacoma", email = "karma@coma.lol" }
]
dependencies = [
    "fastapi>=0.109.2",
    "seaborn>=0.13.2",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.27.0.post1",
    "yarl>=1.9.4",
    "grpcio>=1.60.1",
    "protobuf>=4.25.2",
    "python-multipart>=0.0.7",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
main = "fff.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "grpcio-tools>=1.60.1",
    "protoletariat>=3.2.19",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/fff"]
